# stat-learning-final-project

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: 01_data_preprocessing.ipynb  02_arima_forecast.ipynb  03_ml_forecast.ipynb  arima_forecast.ipynb  data_preprocessing.ipynb  ml_forecast.ipynb
