[project]
name = "stat-learning-final-project"
version = "0.1.0"
description = ""
authors = [
    {name = "0-daedalus",email = "alexandr.alpatov@nu.edu.kz"}
]
readme = "README.md"
requires-python = "3.11.14"
dependencies = [
    "kaggle (>=1.8.2,<2.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=2.3.5,<3.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "pmdarima (>=2.1.1,<3.0.0)",
    "xgboost (>=3.1.2,<4.0.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)",
    "plotly (>=6.5.0,<7.0.0)",
    "plotly-express (>=0.4.1,<0.5.0)",
    "kagglehub (>=0.3.13,<0.4.0)",
    "nbformat (>=5.10.4,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
